@@ -5,13 +5,16 @@ import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.core.userdetails.UserDetails;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
 public class AuthenticationUtil {
+
+    private static final String ANONYMOUS_USER = "anonymousUser";
     public static String getUsername() {
         Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-        if (authentication != null && authentication.isAuthenticated() && !(authentication.getPrincipal() instanceof String && "anonymousUser".equals(authentication.getPrincipal()))) {
+        if (authentication != null && authentication.isAuthenticated() && !ANONYMOUS_USER.equals(authentication.getPrincipal())) {
             Object principal = authentication.getPrincipal();
             if (principal instanceof UserDetails) {
                 return ((UserDetails) principal).getUsername();
@@ -19,7 +22,7 @@ public class AuthenticationUtil {
                 return (String) principal;
             }
         }
-        return null; // or throw an exception if strict handling is required
+        return null; //TODO: or throw an exception if strict handling is required
     }
 
     public static List<String> getRoles() {
@@ -29,6 +32,6 @@ public class AuthenticationUtil {
                     .map(GrantedAuthority::getAuthority)
                     .collect(Collectors.toList());
         }
-        return List.of(); // empty list if no roles or not authenticated
+        return Collections.emptyList(); // empty list if no roles or not authenticated
     }
 }
